--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=literAlura-challenge
 
 #conexion bd
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username = postgres
-spring.datasource.password = laleska
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/literAlura_challenge
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name = org.postgresql.Driver
 
 #jpa
